--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "base-64": "^0.1.0",
+    "buffer": "^5.4.3",
     "react": "16.9.0",
     "react-native": "^0.62.2",
     "react-native-ble-plx": "^1.1.1",
     "react-redux": "7.1.1",
-    "buffer": "^5.4.3",
     "redux": "4.0.4",
     "redux-saga": "1.0.5"
   },
